--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-   
-   background-color: var(--bg);
+   background-image: url(pawel-czerwinski-2dyR13FNg2I-unsplash.jpg);
+   background-size: cover;
 }
 .calsy{
     display: flex;
@@ -33,13 +33,15 @@ body{
     max-width: 350px;
     border-radius: 5px;
     padding: 10px;
-    gap: 20px
+    gap: 20px;
+    background-color:rgba(255, 255, 255, 0.307);
+    backdrop-filter: blur;
 }
 
 .calsy .screen {
     width: 100%;
     height: 20%;
-    background-color:var(--bg)
+    background-color:transparent;
 }
 #display{
     width: 100%;
@@ -49,7 +51,7 @@ body{
     border: none;
     outline: none;
     font-size: 2rem;
-    color: var(--text)
+    color: black;
 }
 .keys{
     display: flex;
@@ -74,16 +76,28 @@ button{
     outline: none;
     border-radius: 5px;
     font-size: 1rem;
-    color: var(--text);
-    box-shadow: 1px 1px 5px var(--keypad-bg-color2) ;
+    color: black;
+    background-color: transparent;
+    border-radius: 5px;
+background: #e0e0e0;
+box-shadow:  2px 2px 6px #bebebe,
+             -2px -2px 6px #ffffff;
+    transition: all ease 0.3;
+}
+
+button:active{
+    scale: 0.89;
 }
 
 #equal{
-    background-color: var(--text);
+    background-color: rgba(85, 17, 70, 0.847);
     color:white;
     width: 45%;
 }
-.togle{
-    right:0;
-    top:0;
+.row1 button , #op{
+    background-color: var(--text);
+    color: white;
+}
+#dot{
+    font-size: 2rem;
 }
