--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 :root {
     --text: #D67BFF;
+    --equal:rgba(85, 17, 70, 0.847);
+    --bgcolor:#D9AFD9;
+    --gradiant:linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+    --calcu:rgba(255, 255, 255, 0.307);
 }
 *{
     margin: 0;
@@ -12,23 +16,23 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-   background-image: url(pawel-czerwinski-2dyR13FNg2I-unsplash.jpg);
-   background-size: cover;
+   /* background-image: url(pawel-czerwinski-2dyR13FNg2I-unsplash.jpg); */
+   background-color: var(--bgcolor);
+   background-image: var(--gradiant);
 }
 .calsy{
     display: flex;
     flex-direction: column;
-    box-shadow: 1px 1px 2px rgb(211, 181, 181);
+    box-shadow: 1px 1px  rgb(211, 181, 181);
     aspect-ratio: 9/14;
     width: 100%;
     max-width: 350px;
     border-radius: 5px;
     padding: 10px;
-    gap: 20px;
-    background-color:rgba(255, 255, 255, 0.307);
+    gap: 10px;
+    background-color:var(--calcu);
     backdrop-filter: blur;
 }
-
 .calsy .screen {
     width: 100%;
     height: 20%;
@@ -41,12 +45,12 @@ body{
     background-color: transparent;
     border: none;
     outline: none;
-    margin-top: -5px;
+    
     font-size: 2rem;
     color: black;
     background: #e0e0e0;
 box-shadow:  2px 2px 6px #bebebe,
-             -2px -2px 6px #ffffff;
+             -1px -1px 2px #ffffff;
 }
 .keys{
     display: flex;
@@ -76,7 +80,7 @@ button{
     border-radius: 5px;
 background: #e0e0e0;
 box-shadow:  2px 2px 6px #bebebe,
-             -2px -2px 6px #ffffff;
+             -1px -1px 2px #ffffff;
     transition: all ease 0.3;
 }
 
@@ -85,7 +89,7 @@ button:active{
 }
 
 #equal{
-    background-color: rgba(85, 17, 70, 0.847);
+    background-color: var(--equal);
     color:white;
     width: 45%;
 }
@@ -95,4 +99,44 @@ button:active{
 }
 #dot{
     font-size: 2rem;
+}
+
+.theme-switch {
+    display: flex;
+
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+}
+
+.toggle-label{
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    background-color: var(--text);
+    border-radius: 20px;
+    position: relative;
+    cursor: pointer;
+
+}
+
+.toggle-label:after{
+    content: '';
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.703);
+    top: 1px;
+    left: 1px;
+    transition: transform 0.3s ease;
+
+}
+
+.theme-switch input{
+    display: none;
+}
+
+.theme-switch input:checked+.toggle-label:after{
+    transform: translateX(20px);
 }
